# ModPlayer

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
src/: Arpeggio.cpp  Arpeggio.hpp  Channel.cpp  Channel.hpp  CombinedEffect.cpp  CombinedEffect.hpp  Effect.hpp  Module.cpp  Module.hpp  SlideDown.cpp  SlideDown.hpp  SlideToNote.cpp  SlideToNote.hpp  SlideUp.cpp  SlideUp.hpp  Vibrato.cpp  Vibrato.hpp  VolumeSlide.cpp  VolumeSlide.hpp  main.cpp
